--- a/style.scss
+++ b/style.scss
@@ -1,33 +1,66 @@
-.setting {
-  display: flex;
+* {
+  font-family: "Chakra Petch", sans-serif;
 }
 
-.buttons  ul {
-  display: flex;
-  li {
-    margin-right: 10px;
-    button {
-      color: red;
-    }
+ul {
+  list-style: none;
+}
+
+.buttons div {
+  display: inline-block;
+  position: relative;
+  
+  button {
+    height: 30px;
+    line-height: 30px;
+    width: 100px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 18px;
+    background-color: rgb(169, 214, 169);
+    margin: 30px;
+  }
+  button:hover {
+    background-color: rgb(191, 215, 191);
+    opacity: 0.8;
+    transition: 0.3s;
+  }
+  button:active {
+    translate: 2px 2px;
+    box-shadow: 2px 2px 2px gray;
+    transition: 0.1s;
   }
 }
 
-.showTimer  ul{
-  display: flex;
+#showTimer {
+  font-size: 100px;
+  font-weight: 800;
+  margin: 100px;
 }
 
-
-
-.setTimerMins {
-  /* border: 1px solid red; */
+.records {
+  display: flex;
   font-size: 30px;
-  height: 30px;
-  width: 100px;
-
-
-
-
-  
+  height: 50px;
+  #times {
+    display: inline-block;
+    width: 50px;
+    text-decoration: underline;
+    margin-right: 20px;
+  }
+  #recordMins {
+    display: inline-block;
+    width: 150px;
+    text-decoration: underline;
+    margin-right: 20px;
+  }
+  #totalMins {
+    display: inline-block;
+    width: 250px;
+    text-decoration: underline;
+    margin-right: 20px;
+  }
 }
 
 .recordMins {
@@ -36,8 +69,3 @@
   width: 50px;
   border: 1px solid black;
 }
-
-ul {
-  list-style: none;
-}
-
