--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,7 @@ ul {
      font-size: 18px;
      background-color: rgb(169, 214, 169);
      margin: 30px;
+     border: 1px solid gray;
      @include m.mq(sp) {
        margin: 10px;
        width: 80px;
@@ -37,7 +38,7 @@ ul {
    }
    button:active {
      translate: 2px 2px;
-     box-shadow: 2px 2px 2px gray;
+     box-shadow: 2px 2px 0 rgb(63, 62, 62);
      transition: 0.1s;
    }
  }
